# Orpheus

./: .gitignore  ChangeLog.md  Makefile  README.md  build.sbt  default.nix  orpheus.cabal  shell.nix
dataset/: #README.md#  .#README.md  README.md  bach.csv  beethoven.csv  convert.sh  horetzky.csv  keysig.csv  primitive.csv  timesig.csv
dataset/feature/: all.csv  keysig.csv  timesig.csv
dataset/xml/: 025000B_.xml  025100B_.xml  025200B_.xml  025300B_.xml  025400B_.xml  025500B_.xml  025600B_.xml  025700B_.xml  025800B_.xml  025900B_.xml  026000B_.xml  026100B_.xml  026200B_.xml  026300B_.xml  026400B_.xml  026500B_.xml  026600B_.xml  026700B_.xml  026800B_.xml  026900B_.xml  027000B_.xml  027100B_.xml  027200B_.xml  027300B_.xml  027600B_.xml  027700B_.xml  027800B_.xml  027900B_.xml  028000B_.xml  028100B_.xml  028200B_.xml  028300B_.xml  028400B_.xml  028500B_.xml  028600B_.xml  028700B_.xml  028800B_.xml  028900B_.xml  029000B_.xml  029100B_.xml  (+230 more)
docs/: hakaruNeeds.md  master.bib  orpheus.bib  orpheus.md
docs/features/: feature.bib  featurePaper.tex  featureSlides.tex
docs/znormal/: znormSlides.tex
hakaru/: multinomialNB.hk  multinomialNBPredict.hk  multinomialNBTrain.hk  multivariateBernoulliNB.hk  mvBernNBPredict.hk  mvBernNBTrain.hk
haskell/Data/ABC/: Parser.hs  Pretty.hs
haskell/Data/Lilypond/: Lexer.x  Parser.hs  Parser.y  Pretty.hs
haskell/Data/MusicXML/: Parser.hs  Pretty.hs
haskell/Orpheus/: DataSet.hs  Main.hs  Model.hs
haskell/Orpheus/Data/: DataSet.hs  Feature.hs  FeatureSet.hs  Music.hs  Parser.hs  Pretty.hs
haskell/Orpheus/Data/Music/: Chord.hs  Context.hs  Diatonic.hs  Enharmonic.hs  Form.hs  Lilypond.hs  Nursery.hs  Progression.hs
haskell/Orpheus/Hakaru/: Predict.hs  Train.hs
haskell/Orpheus/Model/: CategoricalDiatonic.hs  Diatonic.hs  Discriminative.hs  Generative.hs  Length.hs  Type.hs
haskell/Orpheus/Model/Discriminative/: .#Classifier.hs  DecisionTree.hs  LogisticRegression.hs  MajorityClass.hs  RandomForest.hs
haskell/Orpheus/Model/Generative/: Diatonic.hs  Length.hs
parsers/: lilypond.x  lilypond.y
project/: Build.scala  Dependencies.scala
python/: logisticRegression.py  mvBernNB.py  naive_bayes.py  randomforest.py  svm.py  util.py
scala/src/main/scala/orpheus/: model.scala
scala/src/main/scala/orpheus/data/: music.scala
src/main/scala/orpheus/data/: music.scala
