name:                orpheus
version:             0.0.1.0
synopsis:            Music analysis
description:         A ]library for probabilistic music analysis
homepage:            zachsully.com
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Orpheus.Model.Diatonic,
                       Orpheus.Model.Length,
                       Orpheus.Data.Music.Diatonic,
                       Orpheus.Data.Music.Progression,
                       Orpheus.Data.Music.Form,
                       Orpheus.Data.Music.Chord,
                       Orpheus.Data.Music.Nursery,
                       Data.Lilypond.Pretty,
                       Data.Lilypond.Parser

  other-extensions:    DataKinds, OverloadedStrings, TypeFamilies

  build-depends:       base       >= 4.9 && < 4.10,
                       hakaru     >= 0.3 && < 0.4,
                       vector     >= 0.1,
                       parsec     >= 3.1,
                       pretty     >= 1.1,
                       mwc-random >= 0.13 && < 0.14,
                       array      >= 0.5,
                       mtl        >= 2.2
  -- build-tools:         alex, happy
  -- other-modules:       Data.Lilypond.Lexer

  hs-source-dirs:      haskell
  default-language:    Haskell2010
  GHC-Options:         -O2 -Wall -fwarn-tabs

executable orpheus
  Main-is:             Main.hs

  build-depends:       base       >= 4.7  && < 5.0,
                       pretty     >= 1.1,
                       mwc-random >= 0.13 && < 0.14,
                       vector     >= 0.1,
                       text       >= 1.2,
                       hakaru     >= 0.3 && < 0.4,
                       orpheus    >= 0.0


  hs-source-dirs:      haskell/Orpheus
  default-language:    Haskell2010
  GHC-Options:         -O2 -Wall -fwarn-tabs
