name:                orpheus
version:             0.0.1.0
synopsis:            Music analysis
description:         A library for harmonic analysis
homepage:            zachsully.com
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Orpheus.Model.Type,
                       Orpheus.Model.Generative,
                       Orpheus.Model.Generative.Diatonic,
                       Orpheus.Model.Generative.Length,
                       Orpheus.Model.Discriminative,
                       Orpheus.Model.Discriminative.DecisionTree,
                       Orpheus.Model.Discriminative.MajorityClass,
                       Orpheus.Model.Discriminative.RandomForest,
                       Orpheus.Model.Discriminative.LogisticRegression,
                       Orpheus.Data.Music.Diatonic,
                       Orpheus.Data.Music.Enharmonic,
                       Orpheus.Data.Music.Progression,
                       Orpheus.Data.Music.Form,
                       Orpheus.Data.Music.Chord,
                       Orpheus.Data.Music.Nursery,
                       Orpheus.Data.Music.Context,
                       Orpheus.Data.Feature,
                       Orpheus.DataSet,
                       Data.Lilypond.Pretty,
                       Data.Lilypond.Parser
                       Data.MusicXML.Pretty,
                       Data.MusicXML.Parser

  other-extensions:    DataKinds, OverloadedStrings, TypeFamilies

  build-depends:       base                 >= 4.9 && < 4.10,
                       hakaru               >= 0.3,
                       hashable             >= 1.2,
                       vector               >= 0.1,
                       parsec               >= 3.1,
                       pretty               >= 1.1,
                       mwc-random           >= 0.13 && < 0.14,
                       array                >= 0.5,
                       mtl                  >= 2.2,
                       csv                  >= 0.1,
                       filepath             >= 1.4,
                       unordered-containers >= 0.2,
                       random-shuffle       >= 0.0,
                       random               >= 1.1,
                       hxt                  >= 9.3

  hs-source-dirs:      haskell
  default-language:    Haskell2010
  GHC-Options:         -O2 -Wall -fwarn-tabs

executable orpheus
  Main-is:             Main.hs

  build-depends:       base                 >= 4.7  && < 5.0,
                       pretty               >= 1.1,
                       mwc-random           >= 0.13 && < 0.14,
                       vector               >= 0.1,
                       text                 >= 1.2,
                       hakaru               >= 0.3,
                       optparse-applicative >= 0.11 && < 0.14,
                       orpheus              >= 0.0


  hs-source-dirs:      haskell/Orpheus
  default-language:    Haskell2010
  GHC-Options:         -O2 -Wall -fwarn-tabs
